--- a/travelsFront/app/templates/advanced-petition.hbs
+++ b/travelsFront/app/templates/advanced-petition.hbs
@@ -3,223 +3,16 @@
 		<br>
 		{{partial 'petition-form'}}
 
-		<div class="panel panel-default">
-			<div class = "panel-heading">
-				<h4 class = "panel-title">Στοιχεία Aίτησης που Καταχωρεί η Γραμματεία</h4>
-			</div>
-
-			<div class = "panel-body">
-				<div class="profileForm form-group">
-					<label for="dse" class="col-sm-2 control-label">ΔΣΕ</label>
-					<div class="col-sm-4">
-						{{input value=model.advanced_info.dse type="text" class="form-control"}}
-					</div>
-
-					<label for="movement_num" class="col-sm-2 control-label">Αρ. Μετακίνησης</label>
-					<div class="col-sm-4">
-						{{input value=model.movement_num type="text" class="form-control"}}
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="expenditure_date_protocol" class="col-sm-2 control-label">Ημ. Πρ. Αίτησης Δαπάντης</label>
-					<div class="col-sm-4">
-						{{input value=model.expenditure_date_protocol type="date" class="form-control"}}
-					</div>
-
-					<label for="expenditure_protocol" class="col-sm-2 control-label">Αρ. Πρ.Αίτησης Δαπάνης</label>
-					<div class="col-sm-4">	
-						{{input value=model.expenditure_protocol type="text" class="form-control"}}
-					</div>
-				</div> 
-
-				<div class="profileForm form-group">
-					<label for="movement_date_protocol" class="col-sm-2 control-label">Ημ. Πρ. Απόφασης Μετακίνησης</label>
-					<div class="col-sm-4">
-						{{input value=model.movement_date_protocol type="date" class="form-control"}}
-					</div>
-
-					<label for="movement_protocol" class="col-sm-2 control-label">Αρ. Πρ.Απόφασης Μετακίνησης</label>
-					<div class="col-sm-4">	
-						{{input value=model.movement_protocol type="text" class="form-control"}}
-					</div>
-				</div> 
-
-				<div class="profileForm form-group">
-					<label for="depart_date" class="col-sm-2 control-label">Αναχώρηση</label>
-					<div class="col-sm-4">	
-						{{input value=model.depart_date type="datetime-local" class="form-control" }}
-					</div>
-
-					<label for="return_date" class="col-sm-2 control-label">Επιστροφή</label>
-					<div class="col-sm-4">	
-						{{input value=model.return_date type="datetime-local" class="form-control"}}
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="flight_price" class="col-sm-2 control-label">Αεροπορικό Εισιτήριο</label>
-					<div class="col-sm-4">
-						{{input value=model.advanced_info.flight.flightPrice type="text" class="form-control" }}
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="overnight_cost" class="col-sm-2 control-label">Διανυκτέρευση (Ημερήσια)</label>
-					<div class="col-sm-4">
-						{{input value=model.overnight_cost type="text" class="form-control" }}
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="trip_days_before" class="col-sm-2 control-label">Εναπομείνασες Ημέρες Μετακίνησης Εργασιών: Πριν</label>
-					<div class="col-sm-4">
-						{{input value=model.trip_days_before type="text" class="form-control" }}
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="flight" class="col-sm-2 control-label">Στοιχεία  Μετακίνησης</label>
-					<div class="col-sm-4">
-						{{#character-limit max=100}}
-						{{textarea value=model.flight type="textarea" cols="75" class="form-control"}}
-						{{/character-limit}}
-					</div>
-				</div>	
-
-				<div class="profileForm form-group">	
-					<label for="accomondation" class="col-sm-2 control-label">Στοιχεία  Καταλύματος</label>
-					<div class="col-sm-4">
-						{{#character-limit max=100}}
-						{{textarea value=model.accommondation type="textarea" cols="75" class="form-control"}}
-						{{/character-limit}}
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="feeding" class="col-sm-2 control-label">Κάλυψη Διατροφής</label>
-					<div class="col-sm-4">
-						<!-- <select onchange={{action "setFeeding" value="target.value"}} class="form-control"> 
-						<option value=""></option>
-
-						{{#each feedings as |feedingChoice|}}
-						<option value={{feedingChoice.id}} selected={{eq feedingChoice.id model.feeding.id}}>{{feedingChoice.name}}</option>
-						{{/each}}
-						</select> -->
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="non_grnet_quota" class="col-sm-2 control-label">Ημ. Αποζημίωση από άλλο Φορέα</label>
-					<div class="col-sm-4">
-						{{input value=model.non_grnet_quota type="text" class="form-control" }}
-					</div>
-				</div>
-			</div>
-		</div>
+		{{partial 'secretary-form'}}
 
 		<br>
 		<button type="submit" class="btn btn-primary">Αποθήκευση Αλλαγών</button> <!-- {{action "advancedpetitionSave"}} -->
 	</form><br><br>
 
 	<form class="form-horizontal col-md-12" {{action "clearMessage" on="click"}} role="form">
-		<div class="panel panel-default">
-
-			<div class = "panel-heading">
-				<h4 class = "panel-title">Υπολογιζόμενα Οικονομικά Στοιχεία</h4>
-			</div>
-
-			<div class = "panel-body">
-				<div class="profileForm form-group">
-					<label for="transport_days_manual" class="col-sm-2 control-label">Ημέρες Μετακίνησης Εργασιών</label>
-					<div class="col-sm-4">
-						{{input value=model.transport_days_manual type="text" class="form-control"}}
-					</div>
-
-					<label for="transport_num_proposed" class="col-sm-2 control-label">Προτεινόμενη Τιμή</label>
-					<div class="col-sm-4">	
-						{{input value=model.transport_num_proposed type="text" class="form-control" readonly="readonly"}}
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="overnights_num_manual" class="col-sm-2 control-label">Διανυκτερεύσεις</label>
-					<div class="col-sm-4">
-						{{input value=model.overnights_num_manual type="text" class="form-control" }}
-					</div>
-
-					<label for="overnights_num_proposed" class="col-sm-2 control-label">Προτεινόμενη Τιμή</label>
-					<div class="col-sm-4">	
-						{{input value=model.overnights_num_proposed type="text" class="form-control" readonly="readonly"}}
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="compensation_days_manual" class="col-sm-2 control-label">Ημέρες Αποζημίωσης</label>
-					<div class="col-sm-4">
-						{{input value=model.compensation_days_manual type="text" class="form-control"}}
-					</div>
-
-					<label for="compensation_days_proposed" class="col-sm-2 control-label">Προτεινόμενη Τιμή</label>
-					<div class="col-sm-4">	
-						{{input value=model.compensation_days_proposed type="text" class="form-control" readonly="readonly"}}
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="movementCategory" class="col-sm-2 control-label">Αυθημερόν Επιστροφή</label>
-					<div class="col-sm-4">
-						{{input type="text" name="same_day_return_task" class="form-control" value=model.same_day_return_task readonly="readonly"}}	
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="trip_days_before" class="col-sm-2 control-label">Εναπομείνασες Ημέρες Μετακίνησης Εργασιών: Πριν</label>
-					<div class="col-sm-4">
-						{{input value=model.trip_days_before type="text" class="form-control" }}
-					</div>
-
-					<label for="compensation_days_after" class="col-sm-2 control-label">Εναπομείνασες Ημέρες Μετακίνησης Εργασιών: Μετά</label>
-					<div class="col-sm-4">	
-						{{input value=model.compensation_days_after type="text" class="form-control"}}
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="overnights_sum_cost" class="col-sm-2 control-label">Σύνολο Διανυκτέρευσης</label>
-					<div class="col-sm-4">
-						{{input value=model.overnights_sum_cost type="text" class="form-control" }}
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="compensation_level" class="col-sm-2 control-label">Αποζημίωση Ημερήσια</label>
-					<div class="col-sm-4">
-						{{input value=model.compensation_level type="text" class="form-control" }}
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="compensation_final" class="col-sm-2 control-label">Σύνολο Ημερήσιας Αποζημίωσης</label>
-					<div class="col-sm-4">
-						{{input value=model.compensation_final type="text" class="form-control" }}
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="compensation" class="col-sm-2 control-label">ΣΥΝΟΛΟ</label>
-					<div class="col-sm-4">
-						{{input value=model.compensation type="text" class="form-control" }}
-					</div>
-				</div>
-			</div>	
-			<br>
-			<button type="submit" class="btn btn-primary">Τροποποίηση Υπολογιζόμενων Ημερών</button>
-		</div>
+		{{partial 'computed-petition'}}
+	
 	</form><br>
-
-
-
 </div>
 
 {{outlet}}
