Split petition-form into 2 templates

--- a/travelsFront/app/templates/petition-form.hbs
+++ b/travelsFront/app/templates/petition-form.hbs
@@ -1,3 +1,4 @@
+{{partial 'profile-form'}}
 <div class="panel panel-default">
 	<div class = "panel-heading">
       <h4 class = "panel-title">Στοιχεία Προφίλ</h4>
