--- a/travelsFront/app/templates/advanced-petition.hbs
+++ b/travelsFront/app/templates/advanced-petition.hbs
@@ -1,6 +1,8 @@
 <div class="container">
 	<form class="form-horizontal col-md-12 panel panel-default" {{action "clearMessage" on="click"}} role="form">
 		<br>
+		{{partial 'profile-form'}}
+		
 		{{partial 'petition-form'}}
 
 		{{partial 'secretary-form'}}
