Fix missing ids bug

--- a/travelsFront/app/templates/secretary-form.hbs
+++ b/travelsFront/app/templates/secretary-form.hbs
@@ -12,31 +12,31 @@
 
 			<label for="movement_num" class="col-sm-2 control-label">Αρ. Μετακίνησης</label>
 			<div class="col-sm-4">
-				{{input value=model.movement_num type="text" class="form-control"}}
+				{{input value=model.advanced_info.movement_num type="text" class="form-control"}}
 			</div>
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="expenditure_date_protocol" class="col-sm-2 control-label">Ημ. Πρ. Αίτησης Δαπάντης</label>
 			<div class="col-sm-4">
-				{{input value=model.expenditure_date_protocol type="date" class="form-control"}}
+				{{input value=model.advanced_info.expenditure_date_protocol type="date" class="form-control"}}
 			</div>
 
 			<label for="expenditure_protocol" class="col-sm-2 control-label">Αρ. Πρ.Αίτησης Δαπάνης</label>
 			<div class="col-sm-4">	
-				{{input value=model.expenditure_protocol type="text" class="form-control"}}
+				{{input value=model.advanced_info.expenditure_protocol type="text" class="form-control"}}
 			</div>
 		</div> 
 
 		<div class="profileForm form-group">
 			<label for="movement_date_protocol" class="col-sm-2 control-label">Ημ. Πρ. Απόφασης Μετακίνησης</label>
 			<div class="col-sm-4">
-				{{input value=model.movement_date_protocol type="date" class="form-control"}}
+				{{input value=model.advanced_info.movement_date_protocol type="date" class="form-control"}}
 			</div>
 
 			<label for="movement_protocol" class="col-sm-2 control-label">Αρ. Πρ.Απόφασης Μετακίνησης</label>
 			<div class="col-sm-4">	
-				{{input value=model.movement_protocol type="text" class="form-control"}}
+				{{input value=model.advanced_info.movement_protocol type="text" class="form-control"}}
 			</div>
 		</div> 
 
