Add profile-form in petition template

--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -1,5 +1,6 @@
 <div class="container">
 	<form class="form-horizontal col-md-12" {{action "clearMessage" on="click"}} role="form">
+		{{partial 'profile-form'}}
 		
 		{{partial 'petition-form'}}
 		
