Inject secretary info to the related template

--- a/travelsFront/app/templates/secretary-form.hbs
+++ b/travelsFront/app/templates/secretary-form.hbs
@@ -77,7 +77,7 @@
 			<label for="flight" class="col-sm-2 control-label">Στοιχεία  Μετακίνησης</label>
 			<div class="col-sm-4">
 				{{#character-limit max=100}}
-				{{textarea value=model.flight type="textarea" cols="75" class="form-control"}}
+				{{textarea value=model.advanced_info.flight.flightName type="text" cols="35" class="form-control"}}
 				{{/character-limit}}
 			</div>
 		</div>	
@@ -86,7 +86,7 @@
 			<label for="accomondation" class="col-sm-2 control-label">Στοιχεία  Καταλύματος</label>
 			<div class="col-sm-4">
 				{{#character-limit max=100}}
-				{{textarea value=model.accommondation type="textarea" cols="75" class="form-control"}}
+				{{textarea value=model.advanced_info.accomondation.hotel type="textarea" cols="75" class="form-control"}}
 				{{/character-limit}}
 			</div>
 		</div>
@@ -94,20 +94,20 @@
 		<div class="profileForm form-group">
 			<label for="feeding" class="col-sm-2 control-label">Κάλυψη Διατροφής</label>
 			<div class="col-sm-4">
-				<!-- <select onchange={{action "setFeeding" value="target.value"}} class="form-control"> 
-				<option value=""></option>
+				<select onchange={{action "setFeeding" value="target.value"}} class="form-control"> 
+					<option value=""></option>
 
-				{{#each feedings as |feedingChoice|}}
-				<option value={{feedingChoice.id}} selected={{eq feedingChoice.id model.feeding.id}}>{{feedingChoice.name}}</option>
-				{{/each}}
-				</select> -->
+					{{#each feedings as |feedingChoice|}}
+					<option value={{feedingChoice.id}} selected={{eq feedingChoice.id model.advanced_info.feeding.id}}>{{feedingChoice.name}}</option>
+					{{/each}}
+				</select> 
 			</div>
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="non_grnet_quota" class="col-sm-2 control-label">Ημ. Αποζημίωση από άλλο Φορέα</label>
 			<div class="col-sm-4">
-				{{input value=model.non_grnet_quota type="text" class="form-control" }}
+				{{input value=model.advanced_info.non_grnet_quota type="text" class="form-control" }}
 			</div>
 		</div>
 	</div>
