Inject computed values to the related template

--- a/travelsFront/app/templates/petition-form.hbs
+++ b/travelsFront/app/templates/petition-form.hbs
@@ -8,7 +8,7 @@
 		<div class="profileForm form-group">
 			<label for="movementCategory" class="col-sm-2 control-label">Κατηγορία Μετακίνησης</label>
 			<div class="col-sm-4">
-				{{input type="text" name="movementCategory" class="form-control" value=categoryOfMovement.name readonly="readonly"}}	
+				{{input type="text" name="movementCategory" class="form-control" value=model.movementCategory.name readonly="readonly"}}	
 			</div>
 
 			<label for="countryCategory" class="col-sm-2 control-label">Κατηγορία Χώρας</label>
