Add readonly attr to computed-petition non-editable fields

--- a/travelsFront/app/templates/computed-petition.hbs
+++ b/travelsFront/app/templates/computed-petition.hbs
@@ -44,7 +44,7 @@
 		<div class="profileForm form-group">
 			<label for="movementCategory" class="col-sm-2 control-label">Αυθημερόν Επιστροφή</label>
 			<div class="col-sm-4">
-				{{input type="checkbox" name="same_day_return_task" checked=model.same_day_return_task disabled=true}}
+				{{input type="checkbox" name="same_day_return_task" checked=model.same_day_return_task disabled=true readonly="readonly"}}
 
 			</div>
 		</div>
@@ -52,40 +52,40 @@
 		<div class="profileForm form-group">
 			<label for="trip_days_before" class="col-sm-2 control-label">Εναπομείνασες Ημέρες Μετακίνησης Εργασιών: Πριν</label>
 			<div class="col-sm-4">
-				{{input value=model.trip_days_before type="text" class="form-control" }}
+				{{input value=model.trip_days_before type="text" class="form-control" readonly="readonly"}}
 			</div>
 
 			<label for="compensation_days_after" class="col-sm-2 control-label">Εναπομείνασες Ημέρες Μετακίνησης Εργασιών: Μετά</label>
 			<div class="col-sm-4">	
-				{{input value=model.trip_days_after type="text" class="form-control"}}
+				{{input value=model.trip_days_after type="text" class="form-control" readonly="readonly"}}
 			</div>
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="overnights_sum_cost" class="col-sm-2 control-label">Σύνολο Διανυκτέρευσης</label>
 			<div class="col-sm-4">
-				{{input value=model.overnights_sum_cost type="text" class="form-control" }}
+				{{input value=model.overnights_sum_cost type="text" class="form-control" readonly="readonly"}}
 			</div>
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="compensation_level" class="col-sm-2 control-label">Αποζημίωση Ημερήσια</label>
 			<div class="col-sm-4">
-				{{input value=model.compensation_level type="text" class="form-control" }}
+				{{input value=model.compensation_level type="text" class="form-control" readonly="readonly"}}
 			</div>
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="compensation_final" class="col-sm-2 control-label">Σύνολο Ημερήσιας Αποζημίωσης</label>
 			<div class="col-sm-4">
-				{{input value=model.compensation_final type="text" class="form-control" }}
+				{{input value=model.compensation_final type="text" class="form-control" readonly="readonly"}}
 			</div>
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="compensation" class="col-sm-2 control-label">ΣΥΝΟΛΟ</label>
 			<div class="col-sm-4">
-				{{input value=model.total_cost type="text" class="form-control" }}
+				{{input value=model.total_cost type="text" class="form-control" readonly="readonly"}}
 			</div>
 		</div>
 	</div>	
