Fix date format issues

--- a/travelsFront/app/templates/advanced-petition.hbs
+++ b/travelsFront/app/templates/advanced-petition.hbs
@@ -9,7 +9,7 @@
 
 		<br>
 		<!--<button type="submit" class="btn btn-primary" {{action "petitionSave"}}>Αποθήκευση Αλλαγών</button>-->
-		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal"{{action "checkDates"}}>
+		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal" >
 			Αποθήκευση Αλλαγών
 		</button>
 
