Persist all submodels on petition save

--- a/travelsFront/app/templates/secretary-form.hbs
+++ b/travelsFront/app/templates/secretary-form.hbs
@@ -62,7 +62,7 @@
 		<div class="profileForm form-group">
 			<label for="overnight_cost" class="col-sm-2 control-label">Διανυκτέρευση (Ημερήσια)</label>
 			<div class="col-sm-4">
-				{{input value=model.overnight_cost type="text" class="form-control" }}
+				{{input value=model.advanced_info.accomondation.hotelPrice type="text" class="form-control" }}
 			</div>
 		</div>
 
