Add a new petition status at the backend(id=3)

--- a/travelsFront/app/templates/computed-petition.hbs
+++ b/travelsFront/app/templates/computed-petition.hbs
@@ -20,7 +20,7 @@
 		<div class="profileForm form-group">
 			<label for="overnights_num_manual" class="col-sm-2 control-label">Διανυκτερεύσεις</label>
 			<div class="col-sm-4">
-				{{input value=model.advanced_info.overnights_num_manual type="text" class="form-control" }}
+				{{input value=model.advanced_info.overnights_num_manual type="number" class="form-control" }}
 			</div>
 
 			<label for="overnights_num_proposed" class="col-sm-2 control-label">Προτεινόμενη Τιμή</label>
@@ -32,7 +32,7 @@
 		<div class="profileForm form-group">
 			<label for="compensation_days_manual" class="col-sm-2 control-label">Ημέρες Αποζημίωσης</label>
 			<div class="col-sm-4">
-				{{input value=model.advanced_info.compensation_days_manual type="text" class="form-control"}}
+				{{input value=model.advanced_info.compensation_days_manual type="number" class="form-control"}}
 			</div>
 
 			<label for="compensation_days_proposed" class="col-sm-2 control-label">Προτεινόμενη Τιμή</label>
