--- a/travelsFront/app/templates/secretary-form.hbs
+++ b/travelsFront/app/templates/secretary-form.hbs
@@ -55,14 +55,14 @@
 		<div class="profileForm form-group">
 			<label for="flight_price" class="col-sm-2 control-label">Αεροπορικό Εισιτήριο</label>
 			<div class="col-sm-4">
-				{{input value=model.advanced_info.flight.flightPrice type="text" class="form-control" }}
+				{{input value=model.advanced_info.flight.flightPrice type="number" class="form-control" }}
 			</div>
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="overnight_cost" class="col-sm-2 control-label">Διανυκτέρευση (Ημερήσια)</label>
 			<div class="col-sm-4">
-				{{input value=model.advanced_info.accomondation.hotelPrice type="text" class="form-control" }}
+				{{input value=model.advanced_info.accomondation.hotelPrice type="number" class="form-control" }}
 			</div>
 		</div>
 
