Remove seconds from dates standard format

--- a/travelsFront/app/templates/advanced-petition.hbs
+++ b/travelsFront/app/templates/advanced-petition.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-	<form class="form-horizontal col-md-12 panel panel-default" {{action "clearMessage" on="click"}} role="form">
+	<form class="form-horizontal col-md-12 panel panel-default" role="form">
 		<br>
 		{{partial 'profile-form'}}
 
