--- a/travelsFront/app/templates/computed-petition.hbs
+++ b/travelsFront/app/templates/computed-petition.hbs
@@ -8,7 +8,7 @@
 		<div class="profileForm form-group">
 			<label for="transport_days_manual" class="col-sm-2 control-label">Ημέρες Μετακίνησης Εργασιών</label>
 			<div class="col-sm-4">
-				{{input value=model.advanced_info.transport_days_manual type="number" class="form-control"}}
+				{{input value=model.advanced_info.transport_days_manual type="number" class="form-control" readonly="readonly"}}
 			</div>
 
 			<label for="transport_num_proposed" class="col-sm-2 control-label">Προτεινόμενη Τιμή</label>
@@ -20,7 +20,7 @@
 		<div class="profileForm form-group">
 			<label for="overnights_num_manual" class="col-sm-2 control-label">Διανυκτερεύσεις</label>
 			<div class="col-sm-4">
-				{{input value=model.advanced_info.overnights_num_manual type="number" class="form-control" }}
+				{{input value=model.advanced_info.overnights_num_manual type="number" class="form-control" readonly="readonly"}}
 			</div>
 
 			<label for="overnights_num_proposed" class="col-sm-2 control-label">Προτεινόμενη Τιμή</label>
@@ -32,7 +32,7 @@
 		<div class="profileForm form-group">
 			<label for="compensation_days_manual" class="col-sm-2 control-label">Ημέρες Αποζημίωσης</label>
 			<div class="col-sm-4">
-				{{input value=model.advanced_info.compensation_days_manual type="number" class="form-control"}}
+				{{input value=model.advanced_info.compensation_days_manual type="number" class="form-control" readonly="readonly"}}
 			</div>
 
 			<label for="compensation_days_proposed" class="col-sm-2 control-label">Προτεινόμενη Τιμή</label>
@@ -90,5 +90,4 @@
 		</div>
 	</div>	
 	<br>
-	<button type="submit" class="btn btn-primary">Τροποποίηση Υπολογιζόμενων Ημερών</button>
 </div>
