Add action petition save in modal

--- a/travelsFront/app/templates/advanced-petition.hbs
+++ b/travelsFront/app/templates/advanced-petition.hbs
@@ -74,7 +74,7 @@
 
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Κλείσιμο</button>
-						<button type="submit" class="btn btn-primary" data-dismiss="modal">Αποθήκευση</button>
+						<button type="submit" class="btn btn-primary" data-dismiss="modal" {{action "petitionSave"}}>Αποθήκευση</button>
 					</div>
 				</div>
 			</div>
