Implement secretary petition submission

--- a/travelsFront/app/templates/advanced-petition.hbs
+++ b/travelsFront/app/templates/advanced-petition.hbs
@@ -9,7 +9,6 @@
 		{{partial 'secretary-form'}}
 
 		<br>
-		<!--<button type="submit" class="btn btn-primary" {{action "petitionSave"}}>Αποθήκευση Αλλαγών</button>-->
 		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal" {{action "checkDates"}} >
 			Αποθήκευση Αλλαγών
 		</button>
@@ -51,7 +50,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Κλείσιμο</button>
-						<button type="submit" class="btn btn-primary" {{action "petitionSubmit"}} data-dismiss="modal">Αποθήκευση</button>
+						<button type="submit" class="btn btn-primary" {{action "petitionSubmit"}} data-dismiss="modal">Υποβολή</button>
 					</div>
 				</div>
 			</div>
