Disable button for manually computed dates

--- a/travelsFront/app/templates/advanced-petition.hbs
+++ b/travelsFront/app/templates/advanced-petition.hbs
@@ -67,7 +67,7 @@
 
 		{{partial 'computed-petition'}}
 
-		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#datesModal">
+		<button type="button" class="btn btn-primary" id="compute" data-toggle="modal" data-target="#datesModal" disabled>
 			Τροποποίηση Υπολογιζόμενων Ημερών
 		</button>
 
